# SSAFY-special-project-Infra

./: INFRASTRUCKTURE.md  Jenkinsfile  README.md  docker-compose.yml
client/: .gitignore  .prettierrc  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
client/src/: App.tsx
client/src/apis/: account.ts  analyze.ts  apiClient.ts  exercises.ts  home.ts
client/src/components/common/: BodyCheckCard.tsx  (+12 more)
client/src/hooks/: useMedeapipe.ts  useSocket.ts  useTextToSpeech.ts
client/src/lib/: utils.ts
client/src/pages/: ExerciseCoachPage.tsx  ExerciseCoachResultPage.tsx  ExerciseDetail.tsx  ExercisePage.tsx  Home.tsx  Layout.tsx  LoadingPage.tsx  Login.tsx  MyPage.tsx  NotFoundPage.tsx  Router.tsx  SignupPage.tsx  UserBodyAnalysisPage.tsx
client/src/stores/: userStore.ts
client/src/types/: accountsType.ts  analyze.ts  exercise.ts
exec/: PORTING_MANUAL.md
server/: .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: main.py
server/app/api/v1/: __init__.py  analysis.py  auth.py  categories.py  exercises.py  home.py  users.py  workouts.py
server/app/core/: auth.py  config.py  database.py  dependencies.py  init_db.py
server/app/models/: exercise.py  exercise_category.py  exercise_level.py  socket_session.py  user.py  user_exercise.py  workout_session.py
server/app/schemas/: exercise.py  home.py  user.py  workout.py
server/app/services/: body_type_service.py  category_service.py  exercise_service.py  google_oauth_service.py  home_service.py  pose_analyzer.py  socket_service.py  user_service.py  workout_service.py
server/app/utils/: __init__.py  processing.py  pushup_counter.py  squat_counter.py
server/app/websockets/: connection_manager.py  workout_socket.py
server/models/tf_lite_model/: pushup_classifier.tflite  squat_classifier_v1.tflite  squat_classifier_v2.tflite
(+9 files in other folders)
